force-app/main/default/objects/Settlement_Calculator_Field__mdt/Settlement_Calculator_Field__mdt.object-meta.xml
<CustomObject>
    <label>Settlement Calculator Field</label>
    <pluralLabel>Settlement Calculator Fields</pluralLabel>
</CustomObject>