force-app/main/default/objects/Settlement_Calculator_Field__mdt/fields/Display_In_Eligible_Payment__c.field-meta.xml
<CustomField>
    <fullName>Display_In_Eligible_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display In Eligible Payment</label>
    <type>Checkbox</type>
</CustomField>