force-app/main/default/objects/Settlement_Calculator_Field__mdt/fields/Settlement_Object__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Object__c</fullName>
    <label>Settlement Object</label>
    <referenceTo>Settlement_Object__mdt</referenceTo>
    <relationshipLabel>Settlement Calculator Fields</relationshipLabel>
    <relationshipName>Settlement_Calculator_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>