force-app/main/default/objects/Settlement_Calculator_Field__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Settlement_Object__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Field_API_Name__c</columns>
    <columns>IsReadOnly__c</columns>
    <columns>Display_In_Eligible_Payment__c</columns>
    <columns>Display_In_Previous_Payment__c</columns>
    <columns>Display_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>